# tconnectsync

./: .codecov.yml  .gitignore  Dockerfile  LICENSE.md  Pipfile  README.md  api.py  codecov.yml  main.py  nightscout.py  parser.py  secret.py  secret.py.example  setup.cfg  sync.py
.github/ISSUE_TEMPLATE/: setup-help--tconnectsync-heroku.md  setup-help--tconnectsync.md
.github/workflows/: publish-docker.yml  publish-pypi.yml  python-package.yml
api/: __init__.py  android.py  common.py  controliq.py  ws2.py
scripts/: backfill_from_missing.sh  sync_tandem_events.py
tconnectsync/: __init__.py  autoupdate.py  check.py  features.py  nightscout.py  parser.py  process.py  secret.py
tconnectsync/api/: __init__.py  android.py  common.py  controliq.py  tandemsource.py  webui.py  ws2.py
tconnectsync/domain/: bolus.py  device_settings.py  therapy_event.py  utility.py
tconnectsync/domain/tandemsource/: event_class.py  pump_settings.py
tconnectsync/eventparser/: build_events.py  custom_events.json  events.json  events.py  generic.py  raw_event.py  static_dicts.py  transforms.py  utils.py
tconnectsync/parser/: ciq_therapy_events.py  nightscout.py  tconnect.py
tconnectsync/sync/: basal.py  bolus.py  cgm.py  iob.py  profile.py  pump_events.py
tconnectsync/sync/tandemsource/: autoupdate.py  choose_device.py  cli_helpers.py  helpers.py  heroku_helpers.py  process.py  process_alarm.py  process_basal.py  process_basal_resume.py  process_basal_suspension.py  process_bolus.py  process_cartridge.py  process_cgm_alert.py  process_cgm_reading.py  process_cgm_start_join_stop.py  process_device_status.py  process_user_mode.py  update_profiles.py
tconnectsync/util/: __init__.py  cli.py  constants.py
tests/: __init__.py  conftest.py  nightscout_fake.py  secrets.py  test_autoupdate.py  test_nightscout_date_parsing.py  test_process.py  test_secret.py
tests/api/: fake.py  test_android.py  test_common.py  test_controliq.py  test_webui.py  test_ws2.py
tests/domain/: test_therapy_event.py
tests/eventparser/: __init__.py  test_events.py
tests/parser/: test_nightscout.py  test_profile_data.py  test_tconnect.py
tests/sync/: test_basal.py  test_bolus.py  test_cgm.py  test_iob.py  test_profile.py  test_pump_events.py
tests/sync/tandemsource/: test_process.py  test_process_alarm.py  test_process_cgm_reading.py  test_process_device_status.py  test_process_user_mode.py
tests/util/: utilities.py
