[metadata]
name = tconnectsync
version = 2.3.5
author = James Woglom
author_email = j@wogloms.net
description = Syncs Tandem Source (formerly t:connect) insulin pump data to Nightscout for the t:slim X2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwoglom/tconnectsync
project_urls =
    Bug Tracker = https://github.com/jwoglom/tconnectsync/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    requests
    bs4
    arrow
    lxml
    python-dotenv
    requests-mock
    pysocks
    urllib3
    requests
    requests-oidc
    PyJWT==2.8.0
    cryptography==43.0.1; python_version < "3.9"
    cryptography; python_version >= "3.9"
    dataclasses-json
    cffi
    typing-extensions
    importlib-metadata; python_version < "3.8"

[options.packages.find]
where = .
exclude =
    tests*
    scripts*

[options.entry_points]
console_scripts =
    tconnectsync = tconnectsync:main
